# ptxgen-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/ir_model/: Cargo.toml
crates/ir_model/src/: lib.rs  main.rs
crates/llvm_parser/: Cargo.toml
crates/llvm_parser/src/: convert.rs  lib.rs  main.rs  parse_module.rs
crates/llvm_parser/tests/: ir_parser_test.rs  snapshot.rs
crates/llvm_parser/tests/snapshots/: ir_parser_test__saxpy_parser.snap
crates/ptx_backend/: Cargo.toml
crates/ptx_backend/src/: lib.rs  main.rs  ptx_type.rs  type_map.rs  utils.rs
crates/ptx_backend/tests/: add_ll.rs  add_to_ptx_test.rs  call_to_ptx_test.rs  call_with_args_test.rs  cli.rs  cli_nvcc_tests.rs  cli_nvcc_tests.txt  cli_saxpy_to_ptx_test.rs  cli_smoke_test.rs  common.rs  dot_ll.rs  dot_to_ptx_test.rs  fib_ll.rs  fib_to_ptx_test.rs  golden.rs  llvm_to_ptx.rs  llvm_to_ptx_extra.rs  multi_fn_to_ptx_test.rs  ptx_generator.sh  saxpy_to_ptx_test.rs  structure_validation.rs  unhandled.rs
crates/ptx_backend/tests/snapshots/: add_ll__add_ptx.snap  add_ll__add_ptx.snap.new  add_to_ptx_test__add_to_ptx.snap  dot_ll__dot_ptx.snap  dot_ll__dot_ptx.snap.new  dot_to_ptx_test__dot_to_ptx.snap  fib_ll__fib_ptx.snap  fib_ll__fib_ptx.snap.new  fib_to_ptx_test__fib_to_ptx.snap  llvm_to_ptx__saxpy_ptx.snap  llvm_to_ptx__saxpy_ptx.snap.new  llvm_to_ptx_extra__br_cond.snap  llvm_to_ptx_extra__br_uncond.snap  llvm_to_ptx_extra__conflict_type.snap  llvm_to_ptx_extra__phi_basic.snap  llvm_to_ptx_extra__ret_only.snap  saxpy_to_ptx_test__saxpy_to_ptx.snap  unhandled__unhandled_instr.snap
crates/ptx_runtime/: Cargo.toml
crates/ptx_runtime/src/: main.rs
tests/: golden.rs
