
[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Raul Estrada <restrada@treutech.io>"]
homepage = "https://treutech.io/ptxgen-rs"
repository = "https://github.com/treutech/ptxgen-rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
llvm-parser = { path = "../llvm_parser" }
ptx-backend = { path = "../ptx_backend" }
llvm-ir = "0.11.3"
anyhow = "1.0.98"
ir-model = { path = "../ir_model" }

[dev-dependencies]
insta = "1.43.1"
