
[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Raul Estrada <restrada@treutech.io>"]
homepage = "https://treutech.io/ptxgen-rs"
repository = "https://github.com/treutech/ptxgen-rs"

[dependencies]
llvm-parser = { path = "../llvm_parser" }
llvm-ir = "0.11.3"
anyhow = "1.0.98"
ir-model = { path = "../ir_model" }
