
[package]
name = "llvm_parser"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Raul Estrada <restrada@treutech.io>"]
homepage = "https://treutech.io/ptxgen-rs"
repository = "https://github.com/treutech/ptxgen-rs"

[dependencies]
anyhow = "1.0.98"
llvm-ir = { version = "0.11.3", features = ["llvm-14"] }
